--- a/css/styles.css
+++ b/css/styles.css
@@ -298,7 +298,7 @@ height: 300px;
 
 /* Team section */
 .section {}
-
+.container-section-team{}
 .team {
 background-color: var(--light-color);
 padding-top: 120px;
@@ -336,7 +336,8 @@ height: 380px;
     
 }
 .team-content {
-    padding: 32px 16px;
+    padding: 32px 32px;
+  
 }
 .team-name {
     font-style: normal;
@@ -502,10 +503,36 @@ font-style: normal;
         border-radius: 4px;
     width: 264px;
 height: 112px;
+display: flex;
+justify-content: center;
+align-items: center;
+margin-bottom: 8px;
+}
+
+/* Team network icon */
+
+.team-network-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
 }
 
 
+.team-network-item {}
 
+.team-network-link {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    background-color: var(--primary-brand-color);
+    border-radius: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.team-network-link:hover {
+    background-color: var(--pressed-state-color);
+}
+.team-network-icon {}
 /* Clients */
 .container-clients {
     padding-top: 120px;
