--- a/css/styles.css
+++ b/css/styles.css
@@ -327,7 +327,7 @@ gap: 24px;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
         border-radius: 0px 0px 4px 4px;
 width: 264px;
-height: 380px;       
+   
  
 }
 
@@ -358,9 +358,7 @@ height: 380px;
         line-height: 1.5; 
         letter-spacing: 0.02em;
 text-align: center;
-      
-        
-
+margin-bottom: 8px;
        
 }
 
@@ -373,6 +371,13 @@ text-align: center;
 
 }
 
+.container-footer{
+display: flex;
+
+}
+.container-footer-logo{
+    margin-right: 120px;
+}
 .footer-logo {
     font-family: 'Raleway', sans-serif;
         font-style: normal;
@@ -385,10 +390,6 @@ text-align: center;
 
         display: inline-block;
         margin-bottom: 16px;
-
-        
-        
-
 }
 
 .footer-text {font-style: normal;
@@ -398,6 +399,33 @@ text-align: center;
 color: var(--light-color);
 width: 264px;
 }
+
+/* Footer social-media */
+.container-social-media {
+   
+}
+
+.social-media-title {
+    font-size: 16px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.32px;
+    color: var(--white-background-color);
+}
+
+.social-media-list {
+    display: flex;
+    gap: 16px;
+
+}
+.social-media-item {
+}
+
+.social-media-link {}
+
+.social-media-icon {}
 
 
 /* Page 2 */
@@ -578,3 +606,4 @@ fill: var(--subtle-text-color);
 .section-clients-link:hover .clients-icon {
     fill: var(--pressed-state-color);
 }
+
