--- a/css/styles.css
+++ b/css/styles.css
@@ -89,16 +89,7 @@ border-bottom: 1px solid var(--accent-color);
         gap: 40px;
 
 }
-.active::after {
-    bottom: 0;
-    left: 0;
-    position: absolute;
-    width: 100%;
-        height: 4px;
-        border-radius: 2px;
-            background-color: var(--pressed-state-color);
-            content: "";
-}
+
 .header-logo{
     font-family: 'Raleway', sans-serif;
         font-style: normal;
@@ -150,11 +141,21 @@ border-bottom: 1px solid var(--accent-color);
 .header-nav-link:focus 
 {
   color: var(--pressed-state-color);
-  
+}
+.header-nav-link.active::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--pressed-state-color);
 
-  
 }
 .header-nav-link {
+    position: relative;
     transition-property: transition-duration, transition-timing-function;
         transition-duration: 250ms;
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -728,4 +729,52 @@ fill: var(--subtle-text-color);
         line-height: 24px;
         letter-spacing: 0.32px;
         color: var(--light-color);
+}
+
+/* Modal window */
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.40);
+}
+.backdrop.is-hidden {
+   opacity: 0;
+   pointer-events: none;
+   visibility: hidden;
+}
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    width: 408px;
+    height: 584px;
+    border-radius: 4px;
+    background: var(--modal-background-color);
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+}
+.modal-button {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    background-color: var(--accent-color);
+    border-radius: 24px;
+    border: 1px solid rgba(0, 0, 0, 0.10);
+   border: none;
+   padding: 0;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+.modal-button:hover,
+.modal-button:focus,
+.modal-button:active {
+    background-color: var(--pressed-state-color);
+}
+.modal-icon {
 }
