--- a/css/styles.css
+++ b/css/styles.css
@@ -141,6 +141,9 @@ border-bottom: 1px solid var(--accent-color);
 .header-nav-link:focus 
 {
   color: var(--pressed-state-color);
+transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-nav-link.active::after {
     content: "";
@@ -156,9 +159,7 @@ border-bottom: 1px solid var(--accent-color);
 }
 .header-nav-link {
     position: relative;
-    transition-property: transition-duration, transition-timing-function;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 .header-adress {
     font-style: normal;
@@ -187,13 +188,14 @@ padding: 24px 0;
 
 }
 .header-adress-link {
-    transition-property: transition-duration, transition-timing-function;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+   
 }
 .header-adress-link:hover,
 .header-adress-link:focus {
     color: var(--pressed-state-color);
+    transition-property: color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    
 }
 /* Main comtent */
@@ -246,7 +248,7 @@ border: none;
  min-width: 169px;
  height: 56px;
  margin: 0 auto;
-transition-property: transition-duration, transition-timing-function;
+transition-property: background-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -458,6 +460,7 @@ width: 264px;
 
 }
 .social-media-item {
+ 
 }
 
 .social-media-link {
@@ -468,12 +471,13 @@ width: 264px;
         border-radius: 100%;
         justify-content: center;
         align-items: center;
-transition-property: transition-duration, transition-timing-function;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
     }
 .social-media-link:hover {
     background-color: var(--succes-color);
+    transition-property: background-color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 .social-media-icon {
@@ -505,7 +509,7 @@ font-style: normal;
     padding: 12px 24px;
     border: 1px solid var(--accent-color);
     border-radius: 4px;
-    transition-property: transition-duration, transition-timing-function;
+    transition-property: color, background-color, border;
         transition-duration: 250ms;
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -532,7 +536,7 @@ font-style: normal;
 }
 
 .projects-item{
-    transition-property: transition-duration, transition-timing-function;
+    transition-property: box-shadow;
         transition-duration: 250ms;
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -620,13 +624,13 @@ margin-bottom: 8px;
     border-radius: 100%;
     justify-content: center;
     align-items: center;
-    transition-property: transition-duration, transition-timing-function;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 .team-network-link:hover {
     background-color: var(--pressed-state-color);
-   
+transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-network-icon {}
 /* Clients */
@@ -663,32 +667,31 @@ margin-bottom: 8px;
         border: 1px solid var(--subtle-text-color);
         justify-content: center;
         align-items: center;
-        transition-property: transition-duration, transition-timing-function;
-            transition-duration: 250ms;
-            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        
 
 }
 .section-clients-link:hover,
 .section-clients-link:focus {
     border-color: var(--pressed-state-color);
-   
+transition-property: border-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-icon {
 fill: var(--subtle-text-color);
-}
-.section-clients-link:hover .clients-icon {
-    fill: var(--pressed-state-color);
-    
-}
 
+}
+.section-clients-link:hover .clients-icon,
 .section-clients-link:focus .clients-icon {
     fill: var(--pressed-state-color);
-    
-}
-.section-clients-link .clients-icon {
-    transition-property: transition-duration, transition-timing-function;
+    transition-property: fill;
         transition-duration: 250ms;
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.section-clients-link .clients-icon {
+    
 }
 
 /* Overlay */
@@ -721,7 +724,7 @@ fill: var(--subtle-text-color);
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
      
 }
-.overlay p {
+.overlay-text {
     font-size: 16px;
         font-family: Roboto;
         font-style: normal;
@@ -755,6 +758,8 @@ fill: var(--subtle-text-color);
     border-radius: 4px;
     background: var(--modal-background-color);
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+   
+
 }
 .modal-button {
     position: absolute;
@@ -770,6 +775,9 @@ fill: var(--subtle-text-color);
    display: flex;
    justify-content: center;
    align-items: center;
+   transition-property: background-color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-button:hover,
 .modal-button:focus,
