--- a/css/styles.css
+++ b/css/styles.css
@@ -77,13 +77,13 @@ img {
             padding-right: 15px;
         display: flex;
             justify-content: space-between;
-            box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-                0px 1px 1px rgba(46, 47, 66, 0.16),
-                0px 1px 6px rgba(46, 47, 66, 0.08);
+            
 }
 .header {
 border-bottom: 1px solid var(--accent-color);
-
+box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 1px 6px rgba(46, 47, 66, 0.08);
 
 }
 .header-nav {
@@ -164,7 +164,7 @@ border-bottom: 1px solid var(--accent-color);
     transition-property: color;
         transition-duration: 250ms;
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    
+    color: var(--pressed-state-color);
 }
 .header-adress {
     font-style: normal;
@@ -371,12 +371,13 @@ gap: 24px;
         0px 1px 1px 0px rgba(46, 47, 66, 0.16),
         0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 width: 264px;
-   
+border-radius: 0px 0px 4px 4px;
+  
  
 }
 
 .section-team-img {
- border-radius: 0px 0px 4px 4px;;
+ 
     
 }
 .team-content {
@@ -473,7 +474,7 @@ width: 264px;
     display: flex;
         width: 40px;
         height: 40px;
-        background-color: var(--pressed-state-color);
+        background-color: var(--primary-brand-color);
         border-radius: 50%;
         justify-content: center;
         align-items: center;
@@ -514,9 +515,9 @@ font-style: normal;
     color: var(--primary-brand-color);
     background-color: var(--light-color);
     padding: 12px 24px;
-    border: 1px solid var(--accent-color);
+    border-color: var(--accent-color);
     border-radius: 4px;
-    transition-property: color, background-color, border;
+    transition-property: color, background-color, border, box-shadow;
         transition-duration: 250ms;
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -525,10 +526,11 @@ font-style: normal;
     color: var(--white-background-color);
     background-color: var(--pressed-state-color);
     cursor: pointer;
-    border: 1px solid transparent;
+    border-color: transparent;
 box-shadow:  3px 1px rgba(0, 0, 0, 0.1),
     0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
+    
 }
 
 .projects {
@@ -544,15 +546,17 @@ box-shadow:  3px 1px rgba(0, 0, 0, 0.1),
     row-gap: 48px;
     column-gap: 24px;
 }
-
-.projects-item{
+.projects-title {
+    
+}
+.projects-link{
     display: block;
     transition-property: box-shadow;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);   
 }
-.projects-item:hover,
-.projects-item:focus {
+.projects-link:hover
+ {
 box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 transform: translateY(0%);
 }
@@ -641,7 +645,7 @@ margin-bottom: 8px;
 }
 .team-network-link:hover
 .team-network-link:focus {
-    
+    background-color: var(--pressed-state-color);
 
     fill: var(--pressed-state-color);
 }
@@ -656,7 +660,7 @@ margin-bottom: 8px;
         font-size: 36px;
         font-family: Roboto;
         font-weight: 700;
-        line-height: 1.1;
+        line-height: 1.11;
         letter-spacing: 0.72px;
         text-transform: capitalize;
         color: var(--dark-color);
@@ -681,7 +685,7 @@ margin-bottom: 8px;
         justify-content: center;
         align-items: center;
         color: var(--subtle-text-color);
-transition-property: border-color color;
+transition-property: border-color, color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -752,7 +756,7 @@ fill: currentColor;
     width: 100%;
     height: 100%;
     background-color: rgba(46, 47, 66, 0.40);
-    transition: opacity 250ms ease-out, visibility 250ms ease-out;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-hidden {
    opacity: 0;
@@ -769,7 +773,7 @@ fill: currentColor;
     border-radius: 4px;
     background: var(--modal-background-color);
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
-transition: opacity 300ms ease-out 250ms, transform 300ms ease-out 250ms;
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 transition-property: background-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -793,7 +797,7 @@ transition-property: background-color;
    display: flex;
    justify-content: center;
    align-items: center;
-transition-property: background-color border;
+transition-property: background-color, border;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     cursor: pointer;
@@ -806,4 +810,8 @@ transition-property: background-color border;
     fill: var(--white-background-color);
 }
 .modal-icon {
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+ 
 }
