--- a/css/styles.css
+++ b/css/styles.css
@@ -146,6 +146,9 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
   color: var(--pressed-state-color);
 
 }
+.header-nav-link.active {
+    color: var(--pressed-state-color);
+}
 .header-nav-link.active::after {
     content: "";
     display: block;
@@ -517,7 +520,7 @@ font-style: normal;
     padding: 12px 24px;
     border-color: var(--accent-color);
     border-radius: 4px;
-    transition-property: color, background-color, border, box-shadow;
+    transition-property: color, background-color, border-color, box-shadow;
         transition-duration: 250ms;
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -643,7 +646,7 @@ margin-bottom: 8px;
         transition-duration: 250ms;
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.team-network-link:hover
+.team-network-link:hover,
 .team-network-link:focus {
     background-color: var(--pressed-state-color);
 
@@ -773,8 +776,8 @@ fill: currentColor;
     border-radius: 4px;
     background: var(--modal-background-color);
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-transition-property: background-color;
+
+transition-property: background-color, transform;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
