--- a/css/styles.css
+++ b/css/styles.css
@@ -652,7 +652,9 @@ margin-bottom: 8px;
 
     fill: var(--pressed-state-color);
 }
-.team-network-icon {}
+.team-network-icon {
+    fill: var(--light-color);
+}
 /* Clients */
 .section-clients {
     padding-top: 120px;
@@ -774,10 +776,10 @@ fill: currentColor;
     width: 408px;
     min-height: 584px;
     border-radius: 4px;
-    background: var(--modal-background-color);
+    background-color: var(--modal-background-color);
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
 
-transition-property: background-color, transform;
+transition-property:  transform;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
